--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-typing-effect": "^2.0.5",
     "styled-components": "^5.3.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
