Validate session for dashboard And Passenger only in production env.

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,7 @@ test:
 production:
   <<: *default
   database: chamber_of_secrets_production
+  host: localhost
   username: postgres
   #username: chamber_of_secrets
   password: <%= ENV['CHAMBER_OF_SECRETS_DATABASE_PASSWORD'] %>
